// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker opens the calendar popover 1`] = `
<div>
  <div
    class="time-picker"
  >
    <div
      class="bp4-input-group time-picker__input-group"
    >
      <input
        class="bp4-input time-picker__input"
        inputmode="text"
        type="text"
        value="2021-01-20T14:34:31.425"
      />
    </div>
    <div
      class="bp4-datepicker time-picker__date-picker time-picker__date-picker--bottom"
    >
      <div>
        <div
          class="DayPicker"
          lang="en"
        >
          <div
            class="DayPicker-wrapper"
            tabindex="0"
          >
            <div
              class="bp4-datepicker-navbar DayPicker-NavBar"
            >
              <button
                class="bp4-button bp4-minimal DayPicker-NavButton DayPicker-NavButton--prev"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-chevron-left"
                  icon="chevron-left"
                >
                  <svg
                    data-icon="chevron-left"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M7.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71l-4 4C5.11 7.47 5 7.72 5 8c0 .28.11.53.29.71l4 4a1.003 1.003 0 001.42-1.42L7.41 8z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
              <button
                class="bp4-button bp4-minimal DayPicker-NavButton DayPicker-NavButton--next"
                type="button"
              >
                <span
                  aria-hidden="true"
                  class="bp4-icon bp4-icon-chevron-right"
                  icon="chevron-right"
                >
                  <svg
                    data-icon="chevron-right"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <path
                      d="M10.71 7.29l-4-4a1.003 1.003 0 00-1.42 1.42L8.59 8 5.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l4-4c.18-.18.29-.43.29-.71 0-.28-.11-.53-.29-.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </button>
            </div>
            <div
              class="DayPicker-Months"
            >
              <div
                class="DayPicker-Month"
                role="grid"
              >
                <div
                  class="DayPicker-Caption"
                >
                  <div
                    class="bp4-datepicker-caption"
                  >
                    <div
                      class="bp4-html-select bp4-minimal bp4-datepicker-month-select"
                    >
                      <select>
                        <option
                          label="January"
                          value="0"
                        >
                          January
                        </option>
                        <option
                          label="February"
                          value="1"
                        >
                          February
                        </option>
                        <option
                          label="March"
                          value="2"
                        >
                          March
                        </option>
                        <option
                          label="April"
                          value="3"
                        >
                          April
                        </option>
                        <option
                          label="May"
                          value="4"
                        >
                          May
                        </option>
                        <option
                          label="June"
                          value="5"
                        >
                          June
                        </option>
                        <option
                          label="July"
                          value="6"
                        >
                          July
                        </option>
                        <option
                          label="August"
                          value="7"
                        >
                          August
                        </option>
                        <option
                          label="September"
                          value="8"
                        >
                          September
                        </option>
                        <option
                          label="October"
                          value="9"
                        >
                          October
                        </option>
                        <option
                          label="November"
                          value="10"
                        >
                          November
                        </option>
                        <option
                          label="December"
                          value="11"
                        >
                          December
                        </option>
                      </select>
                      <span
                        class="bp4-icon bp4-icon-double-caret-vertical"
                        icon="double-caret-vertical"
                        style="right: 2px;"
                      >
                        <svg
                          aria-labelledby="iconTitle-13"
                          data-icon="double-caret-vertical"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <title
                            id="iconTitle-13"
                          >
                            Open dropdown
                          </title>
                          <path
                            d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                    <div
                      class="bp4-html-select bp4-minimal bp4-datepicker-year-select"
                    >
                      <select>
                        <option
                          value="2003"
                        >
                          2003
                        </option>
                        <option
                          value="2004"
                        >
                          2004
                        </option>
                        <option
                          value="2005"
                        >
                          2005
                        </option>
                        <option
                          value="2006"
                        >
                          2006
                        </option>
                        <option
                          value="2007"
                        >
                          2007
                        </option>
                        <option
                          value="2008"
                        >
                          2008
                        </option>
                        <option
                          value="2009"
                        >
                          2009
                        </option>
                        <option
                          value="2010"
                        >
                          2010
                        </option>
                        <option
                          value="2011"
                        >
                          2011
                        </option>
                        <option
                          value="2012"
                        >
                          2012
                        </option>
                        <option
                          value="2013"
                        >
                          2013
                        </option>
                        <option
                          value="2014"
                        >
                          2014
                        </option>
                        <option
                          value="2015"
                        >
                          2015
                        </option>
                        <option
                          value="2016"
                        >
                          2016
                        </option>
                        <option
                          value="2017"
                        >
                          2017
                        </option>
                        <option
                          value="2018"
                        >
                          2018
                        </option>
                        <option
                          value="2019"
                        >
                          2019
                        </option>
                        <option
                          value="2020"
                        >
                          2020
                        </option>
                        <option
                          value="2021"
                        >
                          2021
                        </option>
                        <option
                          value="2022"
                        >
                          2022
                        </option>
                        <option
                          value="2023"
                        >
                          2023
                        </option>
                        <option
                          value="2024"
                        >
                          2024
                        </option>
                      </select>
                      <span
                        class="bp4-icon bp4-icon-double-caret-vertical"
                        icon="double-caret-vertical"
                      >
                        <svg
                          aria-labelledby="iconTitle-3"
                          data-icon="double-caret-vertical"
                          height="16"
                          role="img"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <title
                            id="iconTitle-3"
                          >
                            Open dropdown
                          </title>
                          <path
                            d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                  <div
                    class="bp4-divider"
                  />
                </div>
                <div
                  class="DayPicker-Weekdays"
                  role="rowgroup"
                >
                  <div
                    class="DayPicker-WeekdaysRow"
                    role="row"
                  >
                    <div
                      class="DayPicker-Weekday"
                      role="columnheader"
                    >
                      <abbr
                        title="Sunday"
                      >
                        Su
                      </abbr>
                    </div>
                    <div
                      class="DayPicker-Weekday"
                      role="columnheader"
                    >
                      <abbr
                        title="Monday"
                      >
                        Mo
                      </abbr>
                    </div>
                    <div
                      class="DayPicker-Weekday"
                      role="columnheader"
                    >
                      <abbr
                        title="Tuesday"
                      >
                        Tu
                      </abbr>
                    </div>
                    <div
                      class="DayPicker-Weekday"
                      role="columnheader"
                    >
                      <abbr
                        title="Wednesday"
                      >
                        We
                      </abbr>
                    </div>
                    <div
                      class="DayPicker-Weekday"
                      role="columnheader"
                    >
                      <abbr
                        title="Thursday"
                      >
                        Th
                      </abbr>
                    </div>
                    <div
                      class="DayPicker-Weekday"
                      role="columnheader"
                    >
                      <abbr
                        title="Friday"
                      >
                        Fr
                      </abbr>
                    </div>
                    <div
                      class="DayPicker-Weekday"
                      role="columnheader"
                    >
                      <abbr
                        title="Saturday"
                      >
                        Sa
                      </abbr>
                    </div>
                  </div>
                </div>
                <div
                  class="DayPicker-Body"
                  role="rowgroup"
                >
                  <div
                    class="DayPicker-Week"
                    role="row"
                  >
                    <div
                      aria-disabled="true"
                      aria-label="Sun Dec 27 2020"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        27
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Mon Dec 28 2020"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        28
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Tue Dec 29 2020"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        29
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Wed Dec 30 2020"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        30
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Thu Dec 31 2020"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        31
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Fri Jan 01 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="0"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        1
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Sat Jan 02 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        2
                      </div>
                    </div>
                  </div>
                  <div
                    class="DayPicker-Week"
                    role="row"
                  >
                    <div
                      aria-disabled="false"
                      aria-label="Sun Jan 03 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        3
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Mon Jan 04 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        4
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Tue Jan 05 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        5
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Wed Jan 06 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        6
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Thu Jan 07 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        7
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Fri Jan 08 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        8
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Sat Jan 09 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        9
                      </div>
                    </div>
                  </div>
                  <div
                    class="DayPicker-Week"
                    role="row"
                  >
                    <div
                      aria-disabled="false"
                      aria-label="Sun Jan 10 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        10
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Mon Jan 11 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        11
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Tue Jan 12 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        12
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Wed Jan 13 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        13
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Thu Jan 14 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        14
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Fri Jan 15 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        15
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Sat Jan 16 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        16
                      </div>
                    </div>
                  </div>
                  <div
                    class="DayPicker-Week"
                    role="row"
                  >
                    <div
                      aria-disabled="false"
                      aria-label="Sun Jan 17 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        17
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Mon Jan 18 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        18
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Tue Jan 19 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        19
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Wed Jan 20 2021"
                      aria-selected="true"
                      class="DayPicker-Day DayPicker-Day--selected"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        20
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Thu Jan 21 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        21
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Fri Jan 22 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        22
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Sat Jan 23 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        23
                      </div>
                    </div>
                  </div>
                  <div
                    class="DayPicker-Week"
                    role="row"
                  >
                    <div
                      aria-disabled="false"
                      aria-label="Sun Jan 24 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        24
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Mon Jan 25 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        25
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Tue Jan 26 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        26
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Wed Jan 27 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        27
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Thu Jan 28 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        28
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Fri Jan 29 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        29
                      </div>
                    </div>
                    <div
                      aria-disabled="false"
                      aria-label="Sat Jan 30 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        30
                      </div>
                    </div>
                  </div>
                  <div
                    class="DayPicker-Week"
                    role="row"
                  >
                    <div
                      aria-disabled="false"
                      aria-label="Sun Jan 31 2021"
                      aria-selected="false"
                      class="DayPicker-Day"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        31
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Mon Feb 01 2021"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        1
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Tue Feb 02 2021"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        2
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Wed Feb 03 2021"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        3
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Thu Feb 04 2021"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        4
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Fri Feb 05 2021"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        5
                      </div>
                    </div>
                    <div
                      aria-disabled="true"
                      aria-label="Sat Feb 06 2021"
                      aria-selected="false"
                      class="DayPicker-Day DayPicker-Day--outside"
                      role="gridcell"
                      tabindex="-1"
                    >
                      <div
                        class="bp4-datepicker-day-wrapper"
                      >
                        6
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="bp4-datepicker-timepicker-wrapper"
        >
          <div
            class="bp4-timepicker"
          >
            <div
              class="bp4-timepicker-arrow-row"
            >
              <span
                class="bp4-timepicker-arrow-button bp4-timepicker-hour"
                tabindex="-1"
              >
                <span
                  class="bp4-icon bp4-icon-chevron-up"
                  icon="chevron-up"
                >
                  <svg
                    aria-labelledby="iconTitle-4"
                    data-icon="chevron-up"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-4"
                    >
                      Increase
                    </title>
                    <path
                      d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="bp4-timepicker-arrow-button bp4-timepicker-minute"
                tabindex="-1"
              >
                <span
                  class="bp4-icon bp4-icon-chevron-up"
                  icon="chevron-up"
                >
                  <svg
                    aria-labelledby="iconTitle-5"
                    data-icon="chevron-up"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-5"
                    >
                      Increase
                    </title>
                    <path
                      d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="bp4-timepicker-arrow-button bp4-timepicker-second"
                tabindex="-1"
              >
                <span
                  class="bp4-icon bp4-icon-chevron-up"
                  icon="chevron-up"
                >
                  <svg
                    aria-labelledby="iconTitle-6"
                    data-icon="chevron-up"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-6"
                    >
                      Increase
                    </title>
                    <path
                      d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="bp4-timepicker-arrow-button bp4-timepicker-millisecond"
                tabindex="-1"
              >
                <span
                  class="bp4-icon bp4-icon-chevron-up"
                  icon="chevron-up"
                >
                  <svg
                    aria-labelledby="iconTitle-7"
                    data-icon="chevron-up"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-7"
                    >
                      Increase
                    </title>
                    <path
                      d="M12.71 9.29l-4-4C8.53 5.11 8.28 5 8 5s-.53.11-.71.29l-4 4a1.003 1.003 0 001.42 1.42L8 7.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
            <div
              class="bp4-timepicker-input-row"
            >
              <input
                class="bp4-timepicker-input bp4-timepicker-hour"
                value="14"
              />
              <span
                class="bp4-timepicker-divider-text"
              >
                :
              </span>
              <input
                class="bp4-timepicker-input bp4-timepicker-minute"
                value="34"
              />
              <span
                class="bp4-timepicker-divider-text"
              >
                :
              </span>
              <input
                class="bp4-timepicker-input bp4-timepicker-second"
                value="31"
              />
              <span
                class="bp4-timepicker-divider-text"
              >
                .
              </span>
              <input
                class="bp4-timepicker-input bp4-timepicker-millisecond"
                value="425"
              />
            </div>
            <div
              class="bp4-timepicker-arrow-row"
            >
              <span
                class="bp4-timepicker-arrow-button bp4-timepicker-hour"
                tabindex="-1"
              >
                <span
                  class="bp4-icon bp4-icon-chevron-down"
                  icon="chevron-down"
                >
                  <svg
                    aria-labelledby="iconTitle-8"
                    data-icon="chevron-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-8"
                    >
                      Decrease
                    </title>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="bp4-timepicker-arrow-button bp4-timepicker-minute"
                tabindex="-1"
              >
                <span
                  class="bp4-icon bp4-icon-chevron-down"
                  icon="chevron-down"
                >
                  <svg
                    aria-labelledby="iconTitle-9"
                    data-icon="chevron-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-9"
                    >
                      Decrease
                    </title>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="bp4-timepicker-arrow-button bp4-timepicker-second"
                tabindex="-1"
              >
                <span
                  class="bp4-icon bp4-icon-chevron-down"
                  icon="chevron-down"
                >
                  <svg
                    aria-labelledby="iconTitle-10"
                    data-icon="chevron-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-10"
                    >
                      Decrease
                    </title>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
              <span
                class="bp4-timepicker-arrow-button bp4-timepicker-millisecond"
                tabindex="-1"
              >
                <span
                  class="bp4-icon bp4-icon-chevron-down"
                  icon="chevron-down"
                >
                  <svg
                    aria-labelledby="iconTitle-11"
                    data-icon="chevron-down"
                    height="16"
                    role="img"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <title
                      id="iconTitle-11"
                    >
                      Decrease
                    </title>
                    <path
                      d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <button
      class="bp4-button time-picker__date-picker-button time-picker__date-picker-button--active"
      title="Choose a date and time"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp4-icon bp4-icon-calendar"
        icon="calendar"
      >
        <svg
          data-icon="calendar"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`TimePicker renders 1`] = `
<div>
  <div
    class="time-picker"
  >
    <div
      class="bp4-input-group time-picker__input-group"
    >
      <input
        class="bp4-input time-picker__input"
        inputmode="text"
        type="text"
        value="2021-01-20T14:34:31.425"
      />
    </div>
    <button
      class="bp4-button time-picker__date-picker-button"
      title="Choose a date and time"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp4-icon bp4-icon-calendar"
        icon="calendar"
      >
        <svg
          data-icon="calendar"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;

exports[`TimePicker renders with short format 1`] = `
<div>
  <div
    class="time-picker"
  >
    <div
      class="bp4-input-group time-picker__input-group--short-format"
    >
      <input
        class="bp4-input time-picker__input"
        inputmode="text"
        type="text"
        value="2021-01-20T14:34"
      />
    </div>
    <button
      class="bp4-button time-picker__date-picker-button"
      title="Choose a date and time"
      type="button"
    >
      <span
        aria-hidden="true"
        class="bp4-icon bp4-icon-calendar"
        icon="calendar"
      >
        <svg
          data-icon="calendar"
          height="16"
          role="img"
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            d="M11 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1s-1 .4-1 1v1c0 .5.4 1 1 1zm3-2h-1v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H6v1c0 1.1-.9 2-2 2s-2-.9-2-2V1H1c-.6 0-1 .5-1 1v12c0 .6.4 1 1 1h13c.6 0 1-.4 1-1V2c0-.6-.5-1-1-1zM5 13H2v-3h3v3zm0-4H2V6h3v3zm4 4H6v-3h3v3zm0-4H6V6h3v3zm4 4h-3v-3h3v3zm0-4h-3V6h3v3zM4 3c.6 0 1-.5 1-1V1c0-.6-.4-1-1-1S3 .4 3 1v1c0 .5.4 1 1 1z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
</div>
`;
